fix vertical alignment in table

--- a/src/app/impact/components/impact-table/impact-table.component.scss
+++ b/src/app/impact/components/impact-table/impact-table.component.scss
@@ -1,5 +1,10 @@
 /* Table */
 
+// explicitly set vertical alignment for the whole table to overwrite default browser styling
+// (see https://stackoverflow.com/questions/28109062/cancel-vertical-align-property for more information)
+thead, tbody, tfoot { vertical-align: middle }
+td, th, tr { vertical-align: middle }
+
 .mat-table {
   width: 100%;
   height: 80px;
@@ -108,6 +113,8 @@
 .description-container {
   display: table-cell;
   text-align: left;
+  padding: 2px;
+  vertical-align: middle;
   width: 99%;
 }
 
